<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/spinner_item"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.widget.Spinner"
        android:icon="@drawable/ic_filter_category"
        android:title="" />
    <item
        android:id="@+id/search_item"
        android:title=""
        android:icon="@drawable/ic_search"
        app:showAsAction="always"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>

    <item
        android:id="@+id/info_in_review"
        android:title=""
        android:icon="@drawable/ic_info"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/done_item"
        android:title=""
        android:icon="@drawable/ic_done"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/filter_item_menu"
        android:title=""
        android:icon="@drawable/ic_filter"
        app:showAsAction="always|collapseActionView"
        >
        <menu>
            <item
                android:id="@+id/selAlc"
                android:title="@string/alc_text_fragment"
                android:icon="@drawable/ic_alcohol"
                app:showAsAction="never"
                />
            <item
                android:id="@+id/selNotAlc"
                android:title="@string/not_alc_text_fragment"
                android:icon="@drawable/ic_no_alcohol"
                app:showAsAction="never"
                />
            <item
                android:id="@+id/selRandom"
                android:title="@string/random_text"
                android:icon="@drawable/ic_random"
                app:showAsAction="never"/>
            <item
                android:id="@+id/selAddFavorite"
                android:title="@string/add_fav_text"
                android:icon="@drawable/ic_fav_select"
                app:showAsAction="never"/>
            <item
                android:id="@+id/selDelFavorite"
                android:title="@string/del_fav_text"
                android:icon="@drawable/ic_fav"
                app:showAsAction="never"/>
            <item
                android:id="@+id/selEditDrink"
                android:title="@string/edit_text_drink"
                android:icon="@drawable/ic_edit"
                app:showAsAction="never"/>
            <item
                android:id="@+id/selClearAll"
                android:title="@string/clear_fav_text"
                android:icon="@drawable/ic_clear_all"
                app:showAsAction="never"/>
            <item
                android:id="@+id/selDelete"
                android:icon="@drawable/ic_del_drink"
                android:title="@string/delete_text"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>