<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="by.poplevco.cocktail.UI.MainFragment"
        android:label="@string/main_text_fragment"
        tools:layout="@layout/fragment_main" >
        <action
            android:id="@+id/action_mainFragment_to_reviewFragment"
            app:destination="@id/reviewFragment" />
    </fragment>

    <fragment
        android:id="@+id/favoritesFragment"
        android:name="by.poplevco.cocktail.UI.FavoritesFragment"
        android:label="@string/favorites_text_fragment"
        tools:layout="@layout/fragment_favorites"
       />
    <fragment
        android:id="@+id/reviewFragment"
        android:name="by.poplevco.cocktail.UI.ReviewFragment"
        android:label=""
        tools:layout="@layout/fragment_review" />
    <fragment
        android:id="@+id/addFragment"
        android:name="by.poplevco.cocktail.UI.AddFragment"
        android:label="@string/new_cocktail_text"
        tools:layout="@layout/fragment_add" />
    <fragment
        android:id="@+id/editFragment"
        android:name="by.poplevco.cocktail.UI.EditFragment"
        android:label="@string/edit_text_fragment"
        tools:layout="@layout/fragment_edit" />

</navigation>