<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UI.MainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/blockSearchByIngredient"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <EditText
            android:id="@+id/searchByIngredient"
            android:hint="@string/search_by_ingredient"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/clickSearchIngred"
            />
        <Button
            android:id="@+id/clickSearchIngred"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/searchByIngredient"

            />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBarMain"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerListDrinks"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blockSearchByIngredient" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:backgroundTint="@color/my_col_200"
        app:tint="@color/white"
        android:src="@drawable/ic_add_float_btn"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:tooltipText="@string/new_cocktail_text"
        android:contentDescription="@string/new_cocktail_text" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/flActButOpen"
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@drawable/ic_open_sel"
        android:rotation="90"
        app:backgroundTint="@android:color/transparent"
        android:outlineProvider="none"
        app:layout_constraintTop_toBottomOf="@+id/blockSearchByIngredient"
        app:layout_constraintEnd_toEndOf="parent"
         />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/flActButClose"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@drawable/ic_open_sel"
        android:rotation="270"
        app:backgroundTint="@android:color/transparent"
        android:outlineProvider="none"
        app:layout_constraintTop_toBottomOf="@+id/blockSearchByIngredient"
        app:layout_constraintEnd_toEndOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>